# paho.mqtt.embedded-c

./: CMakeLists.txt
MQTTClient-C/src/: CMakeLists.txt
MQTTClient-C/src/seL4/: MQTTseL4.c  MQTTseL4.h  MQTTseL4_network.c  MQTTseL4_timer.c  MQTTseL4_uart.c
MQTTPacket/src/: CMakeLists.txt
